Added new notebooks
Added new exercises for NDVI/NDRE treatment map and plant volume based on photogrammetry DSMs.

--- a/ndvi_application.ipynb
+++ b/ndvi_application.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e09a15af-023c-489d-8cf3-886eb33c29d7",
+   "id": "c2621ba0-757d-4324-8761-824efe26cab4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,23 +27,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68c22dda-9828-435f-b94d-9e6bbcb9f25a",
+   "id": "f4e2fabb-969c-4434-af7f-e7fe56e73d64",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Open the image file\n",
-    "img = gdal.Open(\"2021-11-04_Turnage_Florida_Flight2_Clip_BGREN.tif\")\n",
+    "#img = gdal.Open(\"2023-08-24_USDA_NACA_400ft_BGREN_11pTarp.tif\")\n",
+    "img = gdal.Open(\"2023-07-07_USDA_NACA_400ft_BGREN_DLS_11pTarp.tif\")\n",
     "\n",
     "# Get our image's geographic information\n",
     "geotransform = img.GetGeoTransform()\n",
     "wkt = img.GetProjection()\n",
-    "proj = osr.SpatialReference(wkt)"
+    "proj = osr.SpatialReference(wkt)\n",
+    "\n",
+    "xcellsize = geotransform[1]\n",
+    "ycellsize = geotransform[5]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "031bdde1-4bd4-4012-b062-8a305d7f17f3",
+   "id": "537d8411-379e-412c-9b04-8b2bf73614a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f34a2f56-b6ef-4152-9816-b2114374a783",
+   "id": "829f85ff-1256-4231-bbc4-09e5548d2dd6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,19 +90,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b010287c-6a38-413b-94f9-0838704f30bd",
+   "id": "078f6eaa-8e02-4a9b-aa03-40d62bea4f7a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# The easiest way to change the display scale for imagery is to change the DPI.\n",
     "# The larger the number, the more it will slow things down.\n",
-    "plt.rcParams['figure.dpi'] = 200"
+    "plt.rcParams['figure.dpi'] = 300"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bde7fdf-f5a7-48f5-b189-ead1fc171957",
+   "id": "d998aaa6-26fa-49fd-b4dc-d0f0756b1487",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbca68d4-73e2-4144-88b1-5345adb97fdb",
+   "id": "7421e3fd-4ff3-4237-86f7-0a4423ac5a48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,89 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec55d2b1-6acd-44e0-885b-75764eae8b2b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Repeating for each band.\n",
-    "\n",
-    "stdev = np.nanstd(green)\n",
-    "mean = np.nanmean(green)\n",
-    "\n",
-    "print(stdev)\n",
-    "print(mean)\n",
-    "\n",
-    "green_min_std = mean - (stdev*2)\n",
-    "green_max_std = mean + (stdev*2)\n",
-    "\n",
-    "normalize = colors.Normalize(vmin=green_min_std, vmax=green_max_std, clip=True)\n",
-    "imgreen = plt.imshow(green, cmap='Greens_r', norm=normalize)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "545c09ff-060a-4f0c-8181-eff20a897de7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stdev = np.nanstd(red)\n",
-    "mean = np.nanmean(red)\n",
-    "\n",
-    "print(stdev)\n",
-    "print(mean)\n",
-    "\n",
-    "red_min_std = mean - (stdev*2)\n",
-    "red_max_std = mean + (stdev*2)\n",
-    "\n",
-    "normalize = colors.Normalize(vmin=red_min_std, vmax=red_max_std, clip=True)\n",
-    "imred = plt.imshow(red, cmap='Reds_r', norm=normalize)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4c008aea-b36e-480f-b354-cb28b42cfb2f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stdev = np.nanstd(rededge)\n",
-    "mean = np.nanmean(rededge)\n",
-    "\n",
-    "print(stdev)\n",
-    "print(mean)\n",
-    "\n",
-    "rededge_min_std = mean - (stdev*2)\n",
-    "rededge_max_std = mean + (stdev*2)\n",
-    "\n",
-    "normalize = colors.Normalize(vmin=rededge_min_std, vmax=rededge_max_std, clip=True)\n",
-    "imrededge = plt.imshow(rededge, cmap='PuRd_r', norm=normalize)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8c7a3a4e-e873-4fab-a9c8-c0ce8e41ceb0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stdev = np.nanstd(nir)\n",
-    "mean = np.nanmean(nir)\n",
-    "\n",
-    "print(stdev)\n",
-    "print(mean)\n",
-    "\n",
-    "nir_min_std = mean - (stdev*2)\n",
-    "nir_max_std = mean + (stdev*2)\n",
-    "\n",
-    "normalize = colors.Normalize(vmin=nir_min_std, vmax=nir_max_std, clip=True)\n",
-    "imnir = plt.imshow(nir, cmap='gray', norm=normalize)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6bf9365b-7fc4-409a-8147-0c0824fba1a6",
+   "id": "52f7e552-affe-4774-a9f1-f8f0cbea4033",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,30 +158,111 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6c1512a-9c64-4da5-b1ca-f4346ff81a35",
+   "id": "75006959-881d-4330-a0df-c90e03700d15",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Let's see about doing a simple land/water mask. Note that these can be notoriously tricky based\n",
-    "# on various factors such as sun glint, water turbidity, sedimentation, algal content, etc.\n",
+    "# Try to reduce resolution.\n",
+    "\"\"\"\n",
     "\n",
-    "# First, let's create a NDWI image. There are two versions of NDWI, one of which uses SWIR and the other\n",
-    "# which uses the green band. We don't have SWIR, but that's primarily to look for water content in leaves,\n",
-    "# whereas the green band version looks for water in water bodies, which is what we want.\n",
+    "# We need to create a temporary GeoTIFF file to store our results in. Be careful with this,\n",
+    "# as the rows and columns may be transposed from what the NumPy array holds currently.\n",
+    "driver = gdal.GetDriverByName('GTiff')\n",
+    "outdata = driver.Create('{}'.format(\"ndvi.tif\"), ndvi.shape[1], ndvi.shape[0], 1, \\\n",
+    "                        gdal.GDT_Float32, options=['COMPRESS=DEFLATE'])\n",
     "\n",
-    "# NDWI is (Green - NIR)/(Green + NIR)\n",
-    "ndwi = (green - nir) / (green + nir)\n",
-    "stdev = np.nanstd(ndwi)\n",
-    "mean = np.nanmean(ndwi)\n",
+    "# Write our modified classified array to the GeoTIFF we just created, and make sure to add\n",
+    "# in our georeferencing as well.\n",
+    "outdata.GetRasterBand(1).WriteArray(ndvi)\n",
+    "outdata.SetGeoTransform(geotransform)\n",
+    "srs = osr.SpatialReference()\n",
+    "srs.ImportFromWkt(wkt)\n",
+    "outdata.SetProjection(srs.ExportToWkt())\n",
+    "outdata.FlushCache()\n",
     "\n",
-    "normalize = colors.Normalize(vmin=(mean - (stdev*2)), vmax=(mean + (stdev*2)), clip=True)\n",
-    "imndwi = plt.imshow(ndwi, cmap='Spectral', norm=normalize)"
+    "src_ds = gdal.Open('ndvi.tif')\n",
+    "dst_ds = driver.Create('ndvi_lowres.tif', round(ndvi.shape[1]/5), round(ndvi.shape[0]/5), gdal.GDT_Float32)\n",
+    "dst_ds.SetProjection(srs.ExportToWkt())\n",
+    "dst_ds.SetGeoTransform(geotransform)\n",
+    "\n",
+    "#gdal.ReprojectImage(src_ds, dst_ds)\n",
+    "gdal.Warp(dst_ds, src_ds)\n",
+    "\n",
+    "dst_ds = None\n",
+    "\"\"\"\n",
+    "# We need to create a temporary GeoTIFF file to store our results in. Be careful with this,\n",
+    "# as the rows and columns may be transposed from what the NumPy array holds currently.\n",
+    "driver = gdal.GetDriverByName('GTiff')\n",
+    "outdata = driver.Create('{}'.format(\"ndvi.tif\"), ndvi.shape[1], ndvi.shape[0], 1, \\\n",
+    "                        gdal.GDT_Float32, options=['COMPRESS=DEFLATE'])\n",
+    "\n",
+    "# Write our modified classified array to the GeoTIFF we just created, and make sure to add\n",
+    "# in our georeferencing as well.\n",
+    "outdata.GetRasterBand(1).WriteArray(ndvi)\n",
+    "outdata.SetGeoTransform(geotransform)\n",
+    "srs = osr.SpatialReference()\n",
+    "srs.ImportFromWkt(wkt)\n",
+    "outdata.SetProjection(srs.ExportToWkt())\n",
+    "outdata.FlushCache()\n",
+    "outdata = None\n",
+    "\n",
+    "\n",
+    "\n",
+    "gdal.Warp(\"ndvi_lowres.tif\", \"ndvi.tif\", xRes=xcellsize*5, yRes=ycellsize*5, resampleAlg=\"bilinear\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c493f14b-6a6d-4ba1-8348-4cf258a4415d",
+   "id": "5741fc92-8d31-4696-a7f4-823b052fb591",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's look at NDRE as well. More sensitive to nitrogen content.\n",
+    "\n",
+    "# NDRE is (NIR - RedEdge)/(NIR + RedEdge)\n",
+    "\n",
+    "ndre = np.divide((nir - rededge),(nir + rededge))\n",
+    "stdev = np.nanstd(ndvi)\n",
+    "mean = np.nanmean(ndvi)\n",
+    "\n",
+    "normalize = colors.Normalize(vmin=(mean - (stdev*2)), vmax=(mean + (stdev*2)), clip=True)\n",
+    "imndre = plt.imshow(ndre, cmap='Spectral', norm=normalize)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f622fe6e-77d8-449f-9fbf-34ff204ffb97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Try to reduce resolution.\n",
+    "\n",
+    "# We need to create a temporary GeoTIFF file to store our results in. Be careful with this,\n",
+    "# as the rows and columns may be transposed from what the NumPy array holds currently.\n",
+    "driver = gdal.GetDriverByName('GTiff')\n",
+    "outdata = driver.Create('{}'.format(\"ndre.tif\"), ndre.shape[1], ndre.shape[0], 1, \\\n",
+    "                        gdal.GDT_Float32, options=['COMPRESS=DEFLATE'])\n",
+    "\n",
+    "# Write our modified classified array to the GeoTIFF we just created, and make sure to add\n",
+    "# in our georeferencing as well.\n",
+    "outdata.GetRasterBand(1).WriteArray(ndre)\n",
+    "outdata.SetGeoTransform(geotransform)\n",
+    "srs = osr.SpatialReference()\n",
+    "srs.ImportFromWkt(wkt)\n",
+    "outdata.SetProjection(srs.ExportToWkt())\n",
+    "outdata.FlushCache()\n",
+    "outdata = None\n",
+    "\n",
+    "\n",
+    "gdal.Warp(\"ndre_lowres.tif\", \"ndre.tif\", xRes=xcellsize*5, yRes=ycellsize*5, resampleAlg=\"bilinear\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8db9671-bbe9-45d1-bd2f-89152fab8761",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,15 +271,31 @@
     "# give some false readings, and NIR will help make sure we're not looking at something that's highly\n",
     "# reflective in the NIR band (possibly in urban environments).\n",
     "\n",
-    "classified = np.where(((nir <= 0.1) & (ndwi >= 0)), 1, 2)\n",
+    "\"\"\"\n",
+    "classified = np.where(((ndre >= 0.1) & (ndre < 0.3) & (ndvi > 0)), 1, 2)\n",
     "classified = np.where(np.isnan(nir), nir, classified)\n",
-    "imclass = plt.imshow(classified, cmap='coolwarm')"
+    "imclass = plt.imshow(classified, cmap='coolwarm')\"\"\"\n",
+    "\n",
+    "ndvi_img = gdal.Open('ndvi_lowres.tif')\n",
+    "ndvi = ndvi_img.GetRasterBand(1).ReadAsArray()\n",
+    "ndre_img = gdal.Open('ndre_lowres.tif')\n",
+    "ndre = ndre_img.GetRasterBand(1).ReadAsArray()\n",
+    "\n",
+    "conditions  = [ (ndvi <= 0),\n",
+    "                (ndre < 0.1) & (ndvi > 0),\n",
+    "                (ndre >= 0.1) & (ndre < 0.3) & (ndvi > 0), \n",
+    "                (ndre >= 0.3) & (ndre < 0.4) & (ndvi > 0),\n",
+    "                (ndre >= 0.4) & (ndvi > 0) ]\n",
+    "choices     = [ np.nan, 1, 2, 3, 4 ]\n",
+    "    \n",
+    "classified = np.select(conditions, choices, default=np.nan)\n",
+    "imclass = plt.imshow(classified, cmap='RdYlGn')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd925290-d3a6-4dcc-b666-bb1ab266677b",
+   "id": "8e5b7d00-8961-4e8d-b3e6-8884098a924a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +309,7 @@
     "# We need to create a temporary GeoTIFF file to store our results in. Be careful with this,\n",
     "# as the rows and columns may be transposed from what the NumPy array holds currently.\n",
     "driver = gdal.GetDriverByName('GTiff')\n",
-    "outdata = driver.Create('{}'.format(\"filter.tif\"), classified.shape[1], classified.shape[0], 1, \\\n",
+    "outdata = driver.Create('{}'.format(\"ndvi_ndre_filter.tif\"), classified.shape[1], classified.shape[0], 1, \\\n",
     "                        gdal.GDT_Byte, options=['COMPRESS=DEFLATE'])\n",
     "\n",
     "# Write our modified classified array to the GeoTIFF we just created, and make sure to add\n",
@@ -305,91 +324,33 @@
     "# change here, but we will stick with a connectedness of 4 (don't consider diagonal pixels adjacent),\n",
     "# and a threshold value of 50 (groups of pixels smaller than 50 will be disregarded).\n",
     "\n",
-    "gdal.SieveFilter(srcBand=outdata.GetRasterBand(1), maskBand=None, dstBand=outdata.GetRasterBand(1), threshold=50, connectedness=4)\n",
+    "gdal.SieveFilter(srcBand=outdata.GetRasterBand(1), maskBand=None, dstBand=outdata.GetRasterBand(1), threshold=50, connectedness=8)\n",
     "outdata.GetRasterBand(1).SetNoDataValue(0)\n",
     "outdata.FlushCache()\n",
     "\n",
     "# Let's take a look at the results!\n",
-    "flt = gdal.Open(\"filter.tif\")\n",
+    "flt = gdal.Open(\"ndvi_ndre_filter.tif\")\n",
     "fltimg = flt.GetRasterBand(1).ReadAsArray()\n",
     "nodata = flt.GetRasterBand(1).GetNoDataValue()\n",
     "fltimg = np.where(fltimg == nodata, np.nan, fltimg)\n",
-    "imflt = plt.imshow(fltimg, cmap='coolwarm')"
+    "imflt = plt.imshow(fltimg, cmap='RdYlGn')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8c24b40-e024-46d2-9c0a-7fc894468c90",
+   "id": "15a50366-ae82-4dba-a503-a20eae70af18",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert GeoTIFF to shapefile.\n",
+    "# Let's filter this a bit more by resampling.\n",
+    "xres = round(fltimg.shape[1] / 5)\n",
+    "yres = round(fltimg.shape[0] / 5)\n",
     "\n",
-    "# Jupyter notebook tends to hold on to this file, so need to manually delete if re-running\n",
-    "# this is desired.\n",
+    "print(xres, yres)\n",
     "\n",
-    "if not os.path.exists(\"filter.shp\"):\n",
-    "    \n",
-    "    dstlayername = \"filter.shp\"\n",
-    "    drv = ogr.GetDriverByName(\"ESRI Shapefile\")\n",
-    "    dstds = drv.CreateDataSource(dstlayername)\n",
-    "\n",
-    "    # Make sure that a value field exists in the shapefile so that when we call\n",
-    "    # Polygonize the values will migrate over.\n",
-    "    dstlayer = dstds.CreateLayer(dstlayername, srs=srs, geom_type=ogr.wkbMultiPolygon)\n",
-    "    datafield = ogr.FieldDefn('Value', ogr.OFTInteger)\n",
-    "    dstlayer.CreateField(datafield)\n",
-    "    dstfield = dstlayer.GetLayerDefn().GetFieldIndex(\"Value\")\n",
-    "    \n",
-    "    # Call Polygonize to change the raster to polygons. The \"8CONNECTEDNESS\" field may not\n",
-    "    # be necessary depending on how you want to group pixels (only adjacent in four cardinal\n",
-    "    # directions or also on diagonals).\n",
-    "    gdal.Polygonize(flt.GetRasterBand(1), None, dstlayer, dstfield, [\"8CONNECTEDNESS=8\"], callback=None)\n",
-    "    dstds.SyncToDisk()\n",
-    "    dstds=None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fa340d96-6203-4681-a8a3-6847af88d7f9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Now perhaps we want to simplify this shapefile to be a bit less pixelated.\n",
-    "\n",
-    "dstlayername = \"filter_simple.shp\"\n",
-    "drv = ogr.GetDriverByName(\"ESRI Shapefile\")\n",
-    "dstds = drv.CreateDataSource(dstlayername)\n",
-    "dstlayer = dstds.CreateLayer(dstlayername, srs=srs, geom_type=ogr.wkbMultiPolygon)\n",
-    "\n",
-    "# We want to keep all our fields from the prior shapefile, so create both fields\n",
-    "# to match, including FID.\n",
-    "datafield = ogr.FieldDefn('Value', ogr.OFTInteger)\n",
-    "dstlayer.CreateField(datafield)\n",
-    "datafield = ogr.FieldDefn('FID', ogr.OFTInteger)\n",
-    "dstlayer.CreateField(datafield)\n",
-    "\n",
-    "shp = ogr.Open('filter.shp')\n",
-    "# Grab the layer.\n",
-    "layer = shp.GetLayer()\n",
-    "# Find out how many features (polygons) are in our layer.\n",
-    "numfeatures = layer.GetFeatureCount()\n",
-    "\n",
-    "# Iterate through each feature in the shapeifle and simplify the geometry.\n",
-    "# Note that this may actually completely remove some shapes.\n",
-    "for i in range(0, numfeatures):\n",
-    "    feature = layer.GetFeature(i)\n",
-    "    geometry = feature.geometry()\n",
-    "    feature.SetGeometry(geometry.Simplify(0.1))\n",
-    "    dstlayer.CreateFeature(feature)\n",
-    "    #print(filter_simple)\n",
-    "    #print(geometry)\n",
-    "\n",
-    "dstds.SyncToDisk()\n",
-    "dstds=None\n",
-    "shp=None"
+    "result = gdal.Warp(\"\", flt, format=\"VRT\", outputType=gdal.GDT_Byte, xRes=xres, yRes=yres)\n",
+    "print (result)"
    ]
   }
  ],
