--- a/ndvi_application.ipynb
+++ b/ndvi_application.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Land/water mask WIP notebook\n",
+    "# NDVI application map exercise\n",
     "\n",
     "# Author: Lee Hathccock\n",
     "\n",
@@ -32,7 +32,6 @@
    "outputs": [],
    "source": [
     "# Open the image file\n",
-    "#img = gdal.Open(\"2023-08-24_USDA_NACA_400ft_BGREN_11pTarp.tif\")\n",
     "img = gdal.Open(\"2023-07-07_USDA_NACA_400ft_BGREN_DLS_11pTarp.tif\")\n",
     "\n",
     "# Get our image's geographic information\n",
@@ -40,6 +39,7 @@
     "wkt = img.GetProjection()\n",
     "proj = osr.SpatialReference(wkt)\n",
     "\n",
+    "# While we don't have to, will be useful to assign our cell sizes to variables for later\n",
     "xcellsize = geotransform[1]\n",
     "ycellsize = geotransform[5]"
    ]
@@ -51,13 +51,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read in our five bands. Note that you may not need all bands, but for\n",
-    "# availability we're going to bring in all of them.\n",
+    "# Read in our bands. We're only going to grab what we need, so reading in\n",
+    "# red, red edge, and NIR.\n",
     "\n",
     "# This will put the raster values for each band into a NumPy array.\n",
     "\n",
-    "blue = img.GetRasterBand(1).ReadAsArray()\n",
-    "green = img.GetRasterBand(2).ReadAsArray()\n",
     "red = img.GetRasterBand(3).ReadAsArray()\n",
     "rededge = img.GetRasterBand(4).ReadAsArray()\n",
     "nir = img.GetRasterBand(5).ReadAsArray()"
@@ -70,15 +68,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get our nodata value\n",
+    "# Get our nodata values\n",
     "\n",
     "# This may actually change based on each band - probably not common, but\n",
     "# still possible.\n",
     "\n",
-    "nodata = img.GetRasterBand(1).GetNoDataValue()\n",
-    "blue = np.where(blue == nodata, np.nan, blue)\n",
-    "nodata = img.GetRasterBand(2).GetNoDataValue()\n",
-    "green = np.where(green == nodata, np.nan, green)\n",
     "nodata = img.GetRasterBand(3).GetNoDataValue()\n",
     "red = np.where(red == nodata, np.nan, red)\n",
     "nodata = img.GetRasterBand(4).GetNoDataValue()\n",
@@ -102,38 +96,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d998aaa6-26fa-49fd-b4dc-d0f0756b1487",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Let's take a look at our data...\n",
-    "imblue = plt.imshow(blue)\n",
-    "\n",
-    "# Looks a bit dark! Let's see if we can address that in the next section."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "7421e3fd-4ff3-4237-86f7-0a4423ac5a48",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Grab our standard deviation and mean. Will need it so we can scale our imagery\n",
     "# more effectively. Currently using two standard deviations.\n",
-    "stdev = np.nanstd(blue)\n",
-    "mean = np.nanmean(blue)\n",
+    "stdev = np.nanstd(red)\n",
+    "mean = np.nanmean(red)\n",
     "\n",
     "print(stdev)\n",
     "print(mean)\n",
     "\n",
-    "blue_min_std = mean - (stdev*2)\n",
-    "blue_max_std = mean + (stdev*2)\n",
+    "red_min_std = mean - (stdev*2)\n",
+    "red_max_std = mean + (stdev*2)\n",
     "\n",
     "# This calls our normalization function. The color map can be changed in the imshow\n",
     "# call - there are many built-in options, and custom color maps can also be used.\n",
-    "normalize = colors.Normalize(vmin=blue_min_std, vmax=blue_max_std, clip=True)\n",
-    "imblue = plt.imshow(blue, cmap='Blues_r', norm=normalize)"
+    "normalize = colors.Normalize(vmin=red_min_std, vmax=red_max_std, clip=True)\n",
+    "imred = plt.imshow(red, cmap='Reds_r', norm=normalize)"
    ]
   },
   {
@@ -162,36 +143,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Try to reduce resolution.\n",
-    "\"\"\"\n",
-    "\n",
     "# We need to create a temporary GeoTIFF file to store our results in. Be careful with this,\n",
     "# as the rows and columns may be transposed from what the NumPy array holds currently.\n",
-    "driver = gdal.GetDriverByName('GTiff')\n",
-    "outdata = driver.Create('{}'.format(\"ndvi.tif\"), ndvi.shape[1], ndvi.shape[0], 1, \\\n",
-    "                        gdal.GDT_Float32, options=['COMPRESS=DEFLATE'])\n",
     "\n",
-    "# Write our modified classified array to the GeoTIFF we just created, and make sure to add\n",
-    "# in our georeferencing as well.\n",
-    "outdata.GetRasterBand(1).WriteArray(ndvi)\n",
-    "outdata.SetGeoTransform(geotransform)\n",
-    "srs = osr.SpatialReference()\n",
-    "srs.ImportFromWkt(wkt)\n",
-    "outdata.SetProjection(srs.ExportToWkt())\n",
-    "outdata.FlushCache()\n",
-    "\n",
-    "src_ds = gdal.Open('ndvi.tif')\n",
-    "dst_ds = driver.Create('ndvi_lowres.tif', round(ndvi.shape[1]/5), round(ndvi.shape[0]/5), gdal.GDT_Float32)\n",
-    "dst_ds.SetProjection(srs.ExportToWkt())\n",
-    "dst_ds.SetGeoTransform(geotransform)\n",
-    "\n",
-    "#gdal.ReprojectImage(src_ds, dst_ds)\n",
-    "gdal.Warp(dst_ds, src_ds)\n",
-    "\n",
-    "dst_ds = None\n",
-    "\"\"\"\n",
-    "# We need to create a temporary GeoTIFF file to store our results in. Be careful with this,\n",
-    "# as the rows and columns may be transposed from what the NumPy array holds currently.\n",
     "driver = gdal.GetDriverByName('GTiff')\n",
     "outdata = driver.Create('{}'.format(\"ndvi.tif\"), ndvi.shape[1], ndvi.shape[0], 1, \\\n",
     "                        gdal.GDT_Float32, options=['COMPRESS=DEFLATE'])\n",
@@ -206,7 +160,8 @@
     "outdata.FlushCache()\n",
     "outdata = None\n",
     "\n",
-    "\n",
+    "# We don't necessarily want the full resolution of the GeoTIFF, so use the Warp function\n",
+    "# to reduce the resolution of the raster.\n",
     "\n",
     "gdal.Warp(\"ndvi_lowres.tif\", \"ndvi.tif\", xRes=xcellsize*5, yRes=ycellsize*5, resampleAlg=\"bilinear\")"
    ]
@@ -218,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Let's look at NDRE as well. More sensitive to nitrogen content.\n",
+    "# Let's look at NDRE as well. This is more sensitive to nitrogen content.\n",
     "\n",
     "# NDRE is (NIR - RedEdge)/(NIR + RedEdge)\n",
     "\n",
@@ -237,8 +192,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Try to reduce resolution.\n",
-    "\n",
     "# We need to create a temporary GeoTIFF file to store our results in. Be careful with this,\n",
     "# as the rows and columns may be transposed from what the NumPy array holds currently.\n",
     "driver = gdal.GetDriverByName('GTiff')\n",
@@ -255,7 +208,7 @@
     "outdata.FlushCache()\n",
     "outdata = None\n",
     "\n",
-    "\n",
+    "# Reduce the resolution like last time to match.\n",
     "gdal.Warp(\"ndre_lowres.tif\", \"ndre.tif\", xRes=xcellsize*5, yRes=ycellsize*5, resampleAlg=\"bilinear\")"
    ]
   },
@@ -266,28 +219,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Using somewhat arbitrary thresholds, let's compute a land/water mask. NDWI defines greater than zero\n",
-    "# as water. We'll also use our NIR band as well to apply a little extra filtering - sometimes NDWI can\n",
-    "# give some false readings, and NIR will help make sure we're not looking at something that's highly\n",
-    "# reflective in the NIR band (possibly in urban environments).\n",
+    "# There are different ranges that denote nitrogen uptake in NDRE.\n",
+    "# 0.1 - 0.3 - Poor N uptake\n",
+    "# 0.3 - 0.4 - Medium N uptake\n",
+    "# 0.4 - 0.5 - Good N uptake\n",
+    "# < 0.1 - Almost none/no uptake\n",
     "\n",
-    "\"\"\"\n",
-    "classified = np.where(((ndre >= 0.1) & (ndre < 0.3) & (ndvi > 0)), 1, 2)\n",
-    "classified = np.where(np.isnan(nir), nir, classified)\n",
-    "imclass = plt.imshow(classified, cmap='coolwarm')\"\"\"\n",
-    "\n",
+    "# Open our generated NDVI/NDRE low-resolution files and put into arrays.\n",
     "ndvi_img = gdal.Open('ndvi_lowres.tif')\n",
     "ndvi = ndvi_img.GetRasterBand(1).ReadAsArray()\n",
     "ndre_img = gdal.Open('ndre_lowres.tif')\n",
     "ndre = ndre_img.GetRasterBand(1).ReadAsArray()\n",
     "\n",
+    "# Set up a conditional grouping so we can assign values based on our ranges.\n",
+    "# Setting NDVI values less than zero to NoData since we're only interested\n",
+    "# in plants.\n",
     "conditions  = [ (ndvi <= 0),\n",
     "                (ndre < 0.1) & (ndvi > 0),\n",
     "                (ndre >= 0.1) & (ndre < 0.3) & (ndvi > 0), \n",
     "                (ndre >= 0.3) & (ndre < 0.4) & (ndvi > 0),\n",
     "                (ndre >= 0.4) & (ndvi > 0) ]\n",
     "choices     = [ np.nan, 1, 2, 3, 4 ]\n",
-    "    \n",
+    "\n",
     "classified = np.select(conditions, choices, default=np.nan)\n",
     "imclass = plt.imshow(classified, cmap='RdYlGn')"
    ]
@@ -299,8 +252,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We're going to try to filter our imagery a bit more, as this is a bit noisy-looking.\n",
-    "\n",
+    "# Not necessarily needed since we've reduced resolution, but we may still want to filter\n",
+    "# the product a bit like we did the land/water mask.\n",
     "\n",
     "# First, we're going to take everywhere that is a NumPy NaN and turn back to zero. This will\n",
     "# effectively become our nodata value.\n",
@@ -333,7 +286,7 @@
     "fltimg = flt.GetRasterBand(1).ReadAsArray()\n",
     "nodata = flt.GetRasterBand(1).GetNoDataValue()\n",
     "fltimg = np.where(fltimg == nodata, np.nan, fltimg)\n",
-    "imflt = plt.imshow(fltimg, cmap='RdYlGn')\n"
+    "imflt = plt.imshow(fltimg, cmap='RdYlGn')"
    ]
   },
   {
@@ -343,14 +296,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Let's filter this a bit more by resampling.\n",
-    "xres = round(fltimg.shape[1] / 5)\n",
-    "yres = round(fltimg.shape[0] / 5)\n",
-    "\n",
-    "print(xres, yres)\n",
-    "\n",
-    "result = gdal.Warp(\"\", flt, format=\"VRT\", outputType=gdal.GDT_Byte, xRes=xres, yRes=yres)\n",
-    "print (result)"
+    "# Not necessary to write directly to files, but can go straight to memory with Warp.\n",
+    "result = gdal.Warp(\"\", flt, format=\"VRT\", outputType=gdal.GDT_Byte, xRes=xcellsize, yRes=ycellsize)\n",
+    "result_array = result.ReadAsArray()\n",
+    "plt.imshow(result_array)"
    ]
   }
  ],
