--- a/plant_volume.ipynb
+++ b/plant_volume.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plant volume test notebook\n",
+    "# Plant volume notebook\n",
     "\n",
     "# Author: Lee Hathccock\n",
     "\n",
@@ -31,24 +31,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Open the image file\n",
+    "# We're going to clip our image files in this case using a shapefile.\n",
     "\n",
     "shp = ogr.Open('dsm_clip.shp')\n",
     "\n",
+    "# Get the extent, and then rearrange because Warp takes them in a different order\n",
+    "# than what is returned by GetExtent(). Specifically, it's xMin, yMin, xMax, yMax.\n",
+    "# GetExtent() returns xMin, xMax, yMin, yMax.\n",
+    "\n",
     "extent = shp.GetLayer().GetExtent()\n",
-    "print (extent)\n",
     "extent_mod = [extent[0], extent[2], extent[1], extent[3]]\n",
     "\n",
-    "# OutTile = gdal.Warp(OutTileName, Raster, format=RasterFormat, outputBounds=[minX, minY, maxX, maxY], xRes=PixelRes, yRes=PixelRes, dstSRS=Projection, resampleAlg=gdal.GRA_NearestNeighbour, options=['COMPRESS=DEFLATE'])\n",
-    "# OutTile = None # Close dataset\n",
-    "\n",
-    "\n",
+    "# Don't need to change the resolution of our summer DSM, but we are going to clip it\n",
+    "# using the shapefile - or more specifically the extent of the shapefile for simplicity.\n",
     "\n",
     "outimg = gdal.Warp(\"summer_dsm_clip.tif\", \"2023-07-07_USDA_NACA_400ft_dsm.tif\", outputBounds = extent_mod,\n",
     "                    resampleAlg=\"nearestneighbor\", options=['COMPRESS=DEFLATE'])\n",
     "print (outimg)\n",
     "outimg = None\n",
-    "                   \n",
+    "\n",
+    "# Let's open the generated GeoTIFF. Could have put this straight to memory instead.\n",
     "img = gdal.Open(\"summer_dsm_clip.tif\")\n",
     "\n",
     "# Get our image's geographic information\n",
@@ -56,6 +58,7 @@
     "wkt = img.GetProjection()\n",
     "proj = osr.SpatialReference(wkt)\n",
     "\n",
+    "# Definitely need our x/y cell sizes for later.\n",
     "xcellsize = geotransform[1]\n",
     "ycellsize = geotransform[5]\n",
     "\n",
@@ -167,6 +170,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Now sum up all our individual volumes (per-pixel) to get total biomass.\n",
+    "\n",
     "total = np.sum(volume_array)\n",
     "print (total)"
    ]
